Mon Aug 23 09:31:41 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * tao/Transport_Cache_Manager_T.inl:
          Fuzz fix.

Fri Aug 20 20:06:05 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * MPC/config/notifytest.mpb:

          Changed the libpaths and includes back to paths starting with
          $(TAO_ROOT) as they were before
          Tue May 18 21:42:49 UTC 2010  Adam Mitz  <mitza@ociweb.com>

Fri Aug 20 14:44:41 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * tao/Transport_Cache_Manager_T.inl:
        * tao/Transport_Cache_Manager_T.cpp:
          Moved check for null entry outside lock.
          Optimization. Resolves Bugzilla #3659.

Thu Aug 19 10:11:41 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/idltocpp0x/IDLC++0xRFP.odt:
          Updated draft

        * tao/LocalObject.h:
        * tao/LocalObject.inl:
          Removed TAO_Local_Refcounted_Object, it is deprecated for years now

        * tao/Objref_VarOut_T.h:
          Doxygen changes

Wed Aug 18 18:10:21 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_component/context_svh.cpp:
        * TAO_IDL/be/be_visitor_component/context_svs.cpp:

          Removed generation of the context servants's _narrow()
          method, it doesn't appear to be needed any more.

Wed Aug 18 17:14:05 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_component/context_svh.cpp:

          Cosmetic changes.

        * TAO_IDL/be/be_visitor_component/context_svs.cpp:

          Modified generated _narrow() method for contexts, to
          increment the refcount, as with all other _narrow()
          methods.

Wed Aug 18 15:04:49 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/ast/ast_root.cpp(destroy):

          Removed unused local variable.

Wed Aug 18 14:05:20 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * tao/PortableServer/Root_POA.cpp: